--- a/backend/package.json
+++ b/backend/package.json
@@ -12,12 +12,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/node": "^7.5.5",
+    "@babel/node": "^7.26.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "stripe": "^7.8.0"
+    "mongoose": "^8.8.3",
+    "stripe": "^17.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
+    "@babel/cli": "^7.25.9",
+    "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.5.5",
     "nodemon": "^1.19.2"
   }
