--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,13 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-scripts": "3.1.1"
+    "@types/react-router-dom": "^5.3.3",
+    "react-scripts": "^5.0.1"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.2.4",
+    "@chakra-ui/react": "^2.6.2",
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@stripe/stripe-js": "^5.2.0",
+    "@types/node": "^22.10.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "axios": "^0.19.0",
-    "react": "^16.9.0",
+    "framer-motion": "^11.12.0",
+    "react": "18",
     "react-async-script-loader": "^0.3.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "18",
+    "react-router-dom": "^7.0.1",
+    "typescript": "^5.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
