--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react": "18",
     "react-async-script-loader": "^0.3.0",
     "react-dom": "18",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^7.0.1",
     "typescript": "^5.7.2"
   },
