--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  
   "scripts": {
     "start": "babel-node src/index.js",
     "dev": "nodemon --exec babel-node devServer.js",
@@ -14,9 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "@babel/node": "^7.26.0",
+    "@thirdweb-dev/sdk": "^4.0.99",
+    "axios": "^1.8.4",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.4.7",
+    "ethers": "^5.7.2",
     "express": "^4.17.1",
     "mongoose": "^8.8.4",
     "stripe": "^17.4.0"
