--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,5 +1,6 @@
 {
     "version": 2,
+    "name": "nani-boronat-api",
     "builds": [
       {
         "src": "api/index.js",
@@ -9,7 +10,7 @@
     "routes": [
       {
         "src": "/api/(.*)",
-        "dest": "api/index.js"
+        "dest": "/api/index.js"
       }
     ]
   }
