--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "react-scripts": "^5.0.1"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
@@ -16,13 +16,17 @@
     "@types/node": "^22.10.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@walletconnect/web3-provider": "^1.8.0",
     "axios": "^1.8.4",
+    "ethers": "^5.7.2",
     "framer-motion": "^10.17.9",
+    "nft.storage": "^7.2.0",
     "react": "18",
     "react-dom": "18",
-    "react-icons": "^5.3.0",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.3",
-    "typescript": "^5.7.2"
+    "typescript": "^4.9.5",
+    "web3modal": "^1.9.12"
   },
   "scripts": {
     "start": "react-scripts start",
