--- a/backend/package.json
+++ b/backend/package.json
@@ -17,10 +17,11 @@
     "axios": "^1.8.4",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.5.0",
     "ethers": "^5.7.2",
     "express": "^4.17.1",
     "mongoose": "^8.8.4",
+    "raw-body": "^3.0.0",
     "stripe": "^17.4.0"
   },
   "devDependencies": {
@@ -28,5 +29,6 @@
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
     "nodemon": "^1.19.2"
-  }
+  },
+  "packageManager": "yarn@4.2.1+sha512.4326f6a5a916363bfd3533f984bc4c91d47a0c6af2d79fc6e8a25dec14a1be88ec354e2b1d2919461647ec8df1d39303575f7726827704cdf9909d38621c9300"
 }
