--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,22 +1,19 @@
 {
-    "version": 2,
-    "name": "nani-boronat-api",
-    "builds": [
-      {
-        "src": "api/index.js",
-        "use": "@vercel/node"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/api/(.*)",
-        "dest": "/api/index.js"
-      }
-    ],
-    "crons": [
-      {
-        "path": "/api/cron-mint-processor",
-        "schedule": "15 14 * * *"
-      }
-    ]
-  }
+  "version": 2,
+
+  "name": "nani-boronat-api",
+
+  "routes": [
+    {
+      "src": "/api/webhook",
+      "dest": "/backend/api/webhook"
+    }
+  ],
+
+  "crons": [
+    {
+      "path": "/api/cron-mint-processor",
+      "schedule": "15 14 * * *"
+    }
+  ]
+}
