--- a/backend/.env.example
+++ b/backend/.env.example
@@ -9,4 +9,4 @@ CUSTOM_WEBHOOK_TOKEN=your-custom-secret-token-here
 MONGODB_URI=mongodb+srv://user:password@cluster.mongodb.net/dbname?retryWrites=true&w=majority
 
 # URL del frontend
-FRONTEND_URL=https://naniboron.web.app 
+FRONTEND_URL=https://naniboronat.com 
